# ManifoldMarketManager

./: .bumpversion.cfg  .codeclimate.yml  .gitignore  .gitmodules  .travis.yml  FUNDING.yml  LICENSE  MANIFEST.in  Makefile  MarketInfo.sqlite3  MarketInfoBot.sqlite3  MarketInfoPersonal.sqlite3  README.md  Readme.md  daemon.sh  example.json  example.py  example_json.py  requirements.txt  setup.cfg
.circleci/: config.yml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: codacy.yml  codeql.yml  dependency-review.yml  pysa.yml
ManifoldMarketManager/: __init__.py  __main__.py  account.py  application.py  caching.py  consts.py  market.py  util.py
ManifoldMarketManager/confirmation/: __init__.py  telegram.py
ManifoldMarketManager/rule/: __init__.py  abstract.py  generic.py  github.py
ManifoldMarketManager/rule/manifold/: __init__.py  other.py  this.py  user.py
ManifoldMarketManager/state/: __init__.py  persistant.py  volatile.py
ManifoldMarketManager/test/: test_market.py  test_rule.py  test_util.py
ManifoldMarketManager/test/examples/: test_amplified_odds.py
ManifoldMarketManager/test/rule/: test_generic.py  test_github.py
ManifoldMarketManager/test/rule/manifold/: __init__.py  test_other.py  test_this.py  test_user.py
ManifoldMarketManager/test/rule/manifold/test_other/: test_OtherMarketResolved_what_are_the_next_5_badges_well_add_.yml  test_OtherMarketUniqueTraders_will_the_european_union_have_an_off_.yml  test_OtherMarketValue_which_feature_of_my_market_manager_.yml  test_OtherMarketValue_which_prediction_market_site_should_.yml
ManifoldMarketManager/test/rule/manifold/test_this/: test_FibonacciValueRule_what_are_the_next_5_badges_well_add_.yml  test_FibonacciValueRule_which_feature_of_my_market_manager_.yml  (+6 more)
ManifoldMarketManager/test/rule/test_generic/: test_modulus_rule.yml
ManifoldMarketManager/test/rule/test_github/: test_ResolveToPRDelta_LivInTheLookingGlass___ManifoldMarketManager___2_.yml
ManifoldMarketManager/test/state/: __init__.py  test_persistant.py
ManifoldMarketManager/test/test_util/: test_pool_to_prob_cpmm1_this_market_is_a_mirror_of_another_.yml  test_prob_to_num_cpmm1_what_will_my_reported_profit_be_on_.yml
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst  modules.rst
docs/source/_templates/autosummary/: module.rst
src/: __init__.py  __main__.py  account.py  application.py  caching.py  consts.py  market.py  rule.py  util.py
src/rule/: __init__.py  abstract.py  generic.py  github.py
src/rule/generic/: __init__.py  time.py  value.py
src/rule/github/: __init__.py  time.py  value.py
src/rule/manifold/: __init__.py  other.py  this.py  time.py  user.py  value.py
src/test/: __init__.py  test_application.py  test_market.py  test_rule.py  test_util.py
src/test/examples/: __init__.py  test_amplified_odds.py
src/test/rule/: __init__.py  generic.py  test_generic.py  test_github.py
src/test/rule/generic/: test_time.py
src/test/rule/manifold/: test_other.py  test_this.py  test_user.py
src/test/rule/test_generic/: test_modulus_rule.yml  test_variadic_rule_AdditiveRule_.yml  test_variadic_rule_MultiplicitiveRule_.yml
src/test/rule/test_github/: test_ResolveToPRDelta_LivInTheLookingGlass___ManifoldMarketManager___14_.yml  test_ResolveToPRDelta_LivInTheLookingGlass___ManifoldMarketManager___3_.yml  test_ResolveToPRDelta_LivInTheLookingGlass___ManifoldMarketManager___4_.yml  test_ResolveToPRDelta_bcongdon___PyManifold___1_.yml  test_ResolveToPRDelta_bcongdon___PyManifold___3_.yml
src/test/test_util/: test_market_to_answer_map_my_partner_and_i_are_considering_mo_.yml  test_market_to_answer_map_what_are_the_next_5_badges_well_add_.yml  test_market_to_answer_map_which_feature_of_my_market_manager_.yml  test_market_to_answer_map_which_prediction_market_site_should_.yml  test_pool_to_prob_cpmm1_what_will_my_reported_profit_be_on_.yml  test_pool_to_prob_cpmm1_will_the_european_union_have_an_off_.yml  test_pool_to_prob_cpmm1_will_the_trump_special_master_case_.yml
(+203 files in other folders)
