[metadata]
name = ManifoldMarketManager
author = Olivia Appleton
author_email = Liv@OliviaAppleton.com
version = 0.6.0.42
description = Tools and market management for manifold.markets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gappleto97/ManifoldMarketManager
license = AGPLv3
classifiers =
	Development Status :: 3 - Alpha
	Environment :: Console
	Intended Audience :: Developers
	Intended Audience :: Financial and Insurance Industry
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU Affero General Public License v3
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Topic :: Internet
	Topic :: Other/Nonlisted Topic
	Typing :: Typed

[options]
package_dir =
	=src
packages = find:
install_requires =
	attrs
	numpy >= 1.23.1
	requests >= 2.28.0
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
tests =
	flake8 < 5
	pytest
	pytest-benchmark
	pytest-cov
	pytest-flake8
	pytest-isort
	pytest-mypy
	pytest-xdist
	vcrpy >= 4.1.1
github =
	github3.py
telegram =
	python-telegram-bot>=20.0a4
all =
	ManifoldMarketManager[tests,github,telegram]

[flake8]
max-line-length = 120

[pycodestyle]
max-line-length = 120

[pep8]
max-line-length = 120

[isort]
line_length = 120

[mypy]
strict = True
ignore_missing_imports = True
disallow_subclassing_any = False
check_untyped_defs = True
warn_redundant_casts = True
warn_unused_ignores = False

[tool:pytest]
markers =
	slow: tests that run slowly
	network: tests that utilize network functions
